src/styles/main.css
@import url(./preflight-manual.css);

html {
  height: 100%;
  width: 100%;

  margin: 0;
  padding: 0;

  overflow-x: hidden;
  overflow-y: auto;
  overflow-y: overlay;

  font-size: 1rem;
  line-height: 1.5rem;
}

body {
  margin: 0;
  padding: 0 1em;

  min-height: 100vh;
  min-height: -webkit-fill-available;
  min-height: 100dvh;
}

body > * {
  max-width: 65ch;
  margin: auto;
}

#app {
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: auto 1fr auto;
  gap: 2rem;

  min-height: 100vh;
  min-height: -webkit-fill-available;
  min-height: 100dvh;
}

body.cloak {
  display: none;
}

#the-header {
  padding-top: 1rem;
}

#the-footer {
  padding-bottom: 1rem;
}

#the-header,
#the-footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

#the-header>*,
#the-footer>* {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

#the-bottom-sheet {
  position: absolute;
  bottom: 0;
  width: 100%;
}

:root {
  --font-sans: var(--font-custom-sans, "Inter"), var(--font-custom-sans-cjk, "Noto Sans SC"), "Noto Color Emoji", sans-serif;
  --font-serif: var(--font-custom-serif, "Source Serif 4"), var(--font-custom-serif-cjk, "Noto Serif SC"), "Noto Color Emoji", serif;
  --font-mono: var(--font-custom-mono, "JetBrains Mono"), var(--font-custom-mono-cjk, "Noto Sans SC"), "Noto Color Emoji", monospace;
}

:root:not(.dark) {
  --color-one: oklch(from var(--color-original-one) 60% c h);
  --color-two: oklch(from var(--color-original-two) 60% c h);

  --color-one-front: oklch(from var(--color-one) 55% calc(c * 0.75) h);
  --color-one-back: oklch(from var(--color-one) 85% calc(c * 0.25) h);
  --color-two-front: oklch(from var(--color-two) 55% calc(c * 0.75) h);
  --color-two-back: oklch(from var(--color-two) 85% calc(c * 0.25) h);
}

:root.dark {
  --color-one: oklch(from var(--color-original-one) 75% c h);
  --color-two: oklch(from var(--color-original-two) 75% c h);
  
  --color-one-front: oklch(from var(--color-one) 90% calc(c * 0.75) h);
  --color-one-back: oklch(from var(--color-one) 25% calc(c * 0.25) h);
  --color-two-front: oklch(from var(--color-two) 90% calc(c * 0.75) h);
  --color-two-back: oklch(from var(--color-two) 25% calc(c * 0.25) h);
}

:root:not(.dark) {
  /* --color-one: var(--ca, var(--color-muted));
  --color-one-front: var(--cb, var(--color-front));
  --color-one-back: var(--cc, var(--color-back));
  --color-two: var(--cd, var(--color-muted));
  --color-two-front: var(--ce, var(--color-front));
  --color-two-back: var(--cf, var(--color-back)); */
  --color-blend-intensity: 5%;
}

:root.dark {
  /* --color-one: var(--ca, var(--color-muted));
  --color-one-front: var(--cb, var(--color-front));
  --color-one-back: var(--cc, var(--color-back));
  --color-two: var(--cd, var(--color-muted));
  --color-two-front: var(--ce, var(--color-front));
  --color-two-back: var(--cf, var(--color-back)); */
  --color-blend-intensity: 15%;
}

html {
  background: color-mix(in oklab, rgb(var(--color-back)), var(--color-one) var(--color-blend-intensity));
  color: rgba(var(--color-front));
}

html.dark {
  --color-back: 38, 38, 38;
  /* neutral-800 */
  --color-front: 212, 212, 212;
  /* neutral-300 */
  --color-muted: 115, 115, 115;
  /* neutral-500 */
}

html:not(.dark) {
  --color-back: 245, 245, 245;
  /* neutral-100 */
  --color-front: 23, 23, 23;
  /* neutral-900 */
  --color-muted: 163, 163, 163;
  /* neutral-400 */
}

body {
  font-family: var(--font-sans);
}

input {
  @apply ring-2 ring-one focus:(ring-two outline-none) lh-6 rounded py-1 px-2 bg-transparent;
}

::selection {
  background-color: oklch(from var(--color-two-back) l c h / 50%);
  color: var(--color-one-front);
}

* {
  scrollbar-width: thin;
  scrollbar-color: oklch(var(--color-one)) transparent;
}

::-webkit-scrollbar {
  height: 4px;
  width: 4px;
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background: oklch(var(--color-one));
  border: solid oklch(var(--color-one)) 1px;
  border-radius: 2px;
}

::-webkit-scrollbar-thumb:active {
  background-color: oklch(var(--color-two));
  border-color: oklch(var(--color-two));
}

.hover-component-container {
  @apply relative inline-flex justify-center;
}

.hover-component-handle {
  @apply contents;
}

.hover-component-content {
  @apply absolute hidden w-max bottom-[calc(100%+0.5rem)] animate-fade-in animate-duration-150;
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* .shiki {
  --shiki-foreground: #4c4f69;
  --shiki-background: #eff1f5;
  --shiki-builtin: #d20f39;
  --shiki-constant: #fe640b;
  --shiki-string: #40a02b;
  --shiki-comment: #9ca0b0;
  --shiki-keyword: #8839ef;
  --shiki-parameter: #e64553;
  --shiki-function: #1e66f5;
  --shiki-escape: #ea76cb;
  --shiki-punctuation: #7c7f93;
  --shiki-type: #df8e1d;
  --shiki-macro: #179299;
  --shiki-generic: #04a5e5;
}

:root.dark .shiki {
  --shiki-foreground: #dcdfe4;
  --shiki-background: #282c34;
  --shiki-builtin: #e05561;
  --shiki-constant: #f0a45d;
  --shiki-string: #98c379;
  --shiki-comment: #7f848e;
  --shiki-keyword: #c678dd;
  --shiki-parameter: #ff616e;
  --shiki-function: #4aa5f0;
  --shiki-escape: #de73ff;
  --shiki-punctuation: #abb2bf;
  --shiki-type: #e5c07b;
  --shiki-macro: #42b3c2;
  --shiki-generic: #d19a66;
} */

.shiki {
  --shiki-foreground: rgb(var(--color-front));
  --shiki-background: color-mix(in oklab, white, var(--color-one) 12%);
  --shiki-token-constant: color-mix(in oklab, #666666, var(--color-two) 85%);
  --shiki-token-string: var(--color-two-front);
  --shiki-token-string-expression: var(--shiki-token-string);
  --shiki-token-link: var(--shiki-token-string); 
  --shiki-token-comment: color-mix(in oklab, #d5d5d5, var(--color-one-front) 50%);
  --shiki-token-keyword: color-mix(in oklab, #666666, var(--color-two) 85%);
  --shiki-token-parameter: color-mix(in oklab, #262626, var(--color-one-front) 75%);
  --shiki-token-function: var(--color-one-front);
  --shiki-token-punctuation: rgb(var(--color-front));
}

:root.dark .shiki {
  --shiki-background: color-mix(in oklab, black, var(--color-one) 25%);
  --shiki-token-constant: var(--color-two);
  --shiki-token-string: var(--color-two-front);
  --shiki-token-string-expression: var(--shiki-token-string);
  --shiki-token-link: var(--shiki-token-string); 
  --shiki-token-comment: color-mix(in oklab, #262626, var(--color-one-front) 50%);
  --shiki-token-keyword: var(--color-two); 
  --shiki-token-parameter: color-mix(in oklab, #a3a3a3, var(--color-one-front) 50%);
  --shiki-token-function: var(--color-one-front);
  --shiki-token-punctuation: rgb(var(--color-front));
}

